--- a/index.css
+++ b/index.css
@@ -140,7 +140,8 @@
     min-width: 100%!important;
     min-height: 100vh;
     padding: 100px;
-    background: url('./assets/bg.jpg');
+    background-color: #000;
+    /* background: url('./assets/bg.jpg'); */
     background-size: cover;
     display: flex;
     align-items: center;
@@ -473,12 +474,10 @@
     margin-bottom: 0px!important;
 }
 
-/* .dp {
-    border: 1px solid #ddd;
+.dp {
     border-radius: 30%;
-    padding: 5px;
-    width: 250px;
-} */
+    width: 50%;
+}
 
 /* Work experience */
 
