--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@
     /* overflow-x: hidden; */
 }
 
+html {
+    scroll-behavior: smooth !important;
+}
+  
+
 .loaderparent {
     width: 100%;
     height: 100vh;
@@ -68,6 +73,14 @@
 
 .hide {
     display: none!important;
+}
+
+#body {
+    scroll-snap-type: both mandatory !important;
+}
+
+section {
+    scroll-snap-align: start !important;
 }
 
 .banner header {
@@ -250,8 +263,10 @@
 
 .content a:hover {
     color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3,0 0 20px #2196f3,0 0 60px #2196f3;
+    /* background: #2196f3; */
+    box-shadow: 0 0 5px #2196f3,
+                0 0 10px #2196f3,
+                0 0 10px #2196f3;
     transition: 0.75s;
     transition-delay: 1s;
 }
@@ -350,6 +365,60 @@
     filter: invert(1);
     mix-blend-mode: difference;
 }
+
+
+.wrapper {
+    display: flex;
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.2);
+}
+
+.wrapperWord {
+    font-size: 1em !important;
+    color: #fff;
+    font-weight: 300;
+}
+
+.wordList {
+    overflow: hidden !important;
+    height: 1.4em;
+    margin-left: 0.5em;
+}
+
+.words {
+    font-size: 1em !important;
+    color: #fff;
+    font-weight: 300;
+    display: block;
+    animation: spin_words 4s infinite;
+}
+
+@keyframes spin_words {
+    5% {
+        transform: translateY(-12%);
+    }
+    25% {
+        transform: translateY(-0%);
+    }
+    45% {
+        transform: translateY(-112%);
+    }
+    55% {
+        transform: translateY(-100%);
+    }
+    65% {
+        transform: translateY(-212%);
+    }
+    75% {
+        transform: translateY(-200%);
+    }
+    85% {
+        transform: translateY(-312%);
+    }
+    100% {
+        transform: translateY(-300%);
+    }
+}
+
 
 
 /* ABOUT ME  */
